Fix dark mode

--- a/assets/css/components/table.scss
+++ b/assets/css/components/table.scss
@@ -10,7 +10,7 @@
     radial-gradient(at 100% 50%, rgba(0, 0, 0, 0.2), transparent 70%);
 }
 
-.dark {
+.theme-dark {
   .table-container {
     background-attachment: local, local, scroll, scroll;
     background-position: 0 0, 100% 0, 0 0, 100% 0;
